--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQL.classpath}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.flatlaf-0.45.jar}
+    ${file.reference.flatlaf-0.45.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
